fix: scrollbars in code blocks

--- a/alvaro-cuesta.github.io/src/index.css
+++ b/alvaro-cuesta.github.io/src/index.css
@@ -290,5 +290,5 @@ body {
 }
 
 pre > code {
-  overflow: scroll;
+  overflow: auto;
 }
